GtkWindow: Check for popover realized-ness before unrealizing

https://bugzilla.gnome.org/show_bug.cgi?id=755473